# LibraryTemplate

./: .gitignore  .gitmodules  .hgignore  .hgtags  CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  Doxyfile  Makefile.am  SampleConfig.cmake.in  configure.ac  setuplinks.sh
.CMake/: CheckDefaultDeclarations.cmake  CheckRightValueReference.cmake  CheckStaticAssert.cmake  FindCppUnit.cmake  Makefile.am
.CMake.bak/: Makefile.am
.CMake.bak/Modules/: FindCppUnit.cmake
.M4/: CheckExtraFlags.m4  CheckRightValueReference.m4  CheckStaticAssert.m4  Makefile.am  WithExtLibs.m4
.M4.bak/: CheckDefaultDeclarations.m4  CheckExtraFlags.m4  LinkerScripts.m4
.github/workflows/: automake.yml  cmake.yml
Include/LibraryProject/.Config/: ConfiguredLibraryProject.h.in  PreConfigLibraryProject.msvc.h
Include/LibraryProject/Bar/: Bar.h
Include/LibraryProject/Common/: LibraryProjectSettings.h  SampleDocument.h
Include/LibraryProject/Foo/: Foo.h
Include/Sample/.Config/: ConfiguredSample.h.in  PreConfigSample.msvc.h
Include/Sample/Bar/: Bar.h
Include/Sample/Common/: LibraryProjectSettings.h  SampleDocument.h  SampleSettings.h
Include/Sample/Foo/: Foo.h
Lib/: CMakeLists.txt
Lib/.Config/: CMakeLists.txt  Makefile.am
Lib/.LinkerScript/: Bar.in  Foo.in
Lib/Bar/: Bar.cpp  CMakeLists.txt  Makefile.am
Lib/Bar/Tests/: BarTest.cpp  TestConf.cmake  TestConf.mak
Lib/Common/: CMakeLists.txt  Makefile.am  SampleDocument.cpp
Lib/Common/Tests/: LibraryProjectSettingsTest.cpp  SampleDocumentTest.cpp  SampleSettingsTest.cpp  TestConf.cmake  TestConf.mak
Lib/Foo/: CMakeLists.txt  Foo.cpp  Makefile.am
Lib/Foo/Tests/: FooTest.cpp  TestConf.cmake  TestConf.mak
Lib/Tests/: CMakeLists.txt  Makefile.am
Lib/Tests.bak/: TestDriver.cpp  TestDriver.h
Lib/Tests/.TestsCommon/: CMakeLists.txt  Makefile.am
