
##
##    List of Directories.
##

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    BuildLibraryCommon.cmake        \
    CheckConstExpr.cmake            \
    CheckDefaultDeclarations.cmake  \
    CheckNullPtr.cmake              \
    CheckOverride.cmake             \
    CheckRightValueReference.cmake  \
    CheckStaticAssert.cmake         \
    EnableCxx11.cmake               \
    FindCppUnit.cmake

