
##
##    List of Directories.
##

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    CheckConstExpr.m4              \
    CheckDefaultDeclarations.m4    \
    CheckExtraFlags.m4             \
    CheckNullPtr.m4                \
    CheckOverride.m4               \
    CheckRightValueReference.m4    \
    CheckStaticAssert.m4           \
    ConfigDirectory.m4             \
    EnableCxx11.m4                 \
    LinkerScripts.m4               \
    Makefile.DirList.inc           \
    Makefile.Install.inc           \
    WithExtLibs.m4

